# 535

./: pyproject.toml
hw1/: Tran_Assign1_nb.ipynb  Untitled.ipynb  WeightedMajorityVote.csv
hw2/: Tran_Assign2_nb.ipynb
