[tool.poetry]
name = "535"
version = "0.1.0"
description = ""
authors = ["BrandonThaiTran <xbrandonthaitran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
